# Paradigms-course

./: .gitignore
Assembler/: sub_long.asm
C++/BigInteger/: big_integer.cpp  big_integer.h  big_integer_testing.cpp
C++/BigInteger optimization/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp
C++/BigInteger optimization/vector/: vector.h
C++/Huffman/: CMakeLists.txt  huffman_testing.cpp
C++/Huffman/lib/: CMakeLists.txt  accomulator.cpp  compression.cpp  decompression.cpp  stream_input.cpp  stream_output.cpp  tree.cpp  word.cpp
C++/Huffman/lib/header/: accomulator.h  compression.h  decompress.h  stream_input.h  stream_output.h  tree.h  type.h  word.h
C++/Huffman/utility/: CMakeLists.txt  main.cpp  my_ifstream.cpp  my_ofstream.cpp
C++/Huffman/utility/header/: my_ifstream.h  my_ofstream.h
C++/Tasks/: matrix.cpp
C++/Vector/: vector.cpp  vector.h
C++/bigint/: big_integer.cpp  big_integer.h  cmake_install.cmake
Javascript/paradigms-2017/: README.md
Javascript/tasks/: 63A.js  63B.js  776A.js  776C.js  777C.js
asm/: mul_long.asm
java/ArrayQueue/: ArrayQueueModule.java  Test.java
java/BinarySearch/: BinarySearchSpan.java
java/Expression/: AbstractBinaryOperator.java  Add.java  Const.java  Divide.java  DoubleExpression.java  Expression.java  ExpressionAll.java  Multiply.java  Subtract.java  TripleExpression.java  Variable.java
java/HW02/: BinarySearch.java
java/HW03/: ArrayQueue.java  ArrayQueueADT.java
java/Queue/: AbstractQueue.java  ArrayQueue.java  LinkedQueue.java  Main.java  Queue.java
js/: 768A.js  777E .js
(+146 files in other folders)
